src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-ofT-dwP0.25-dhP0.5-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-floating true\n    default-column-width { proportion 0.25; }\n    default-window-height { proportion 0.5; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 320 × 360, bounds: 1280 × 720, states: []
size: 1280 × 720, bounds: 1280 × 720, states: [Activated]
